--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,9 @@
 ---
 layout: main
 ---
+{% if site.mixpanel-code %}
+<script type="text/javascript">mixpanel.track("Page View")</script>
+{% endif %}
 <article class="article-page">
   <div class="page-content">
     {% if page.img %}
