--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -30,7 +30,7 @@ layout: default
         {% endif %}
 
         {% if site.social-linkedin %}
-          <li class="linkedin"><a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+           <li class="linkedin"><a href="https://in.linkedin.com/in/{{site.social-linkedin}}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         {% endif %}
         
         {% if site.social-email %}
